--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<li><a href="#top">KEMBALI KE ATAS</a></li>
 		</p>
 	</div>
-	<div id="footer"> Copyright &copy 2020. By <a href="https://mbasic.facebook.com/edi.garsellii.9" target="_blank"><font color="white">Edi Garsell ll</a></div></font>
+	<div id="footer"> Copyright &copy 2021. By <a href="https://mbasic.facebook.com/edi.garsellii.9" target="_blank"><font color="white">Edi ID</a></div></font>
 </div>
 </body>
 </html>
